Closed Bug 1546255 Opened 7 years ago Closed 7 years ago

Hit MOZ_CRASH(We should be able to map a raw rule to a rule

Categories

(Core :: CSS Parsing and Computation, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox-esr60 --- unaffected
firefox67 --- wontfix
firefox68 --- wontfix
firefox69 --- fixed

People

(Reporter: jkratzer, Assigned: emilio)

References

(Blocks 1 open bug)

Details

(Keywords: assertion, testcase)

Attachments

(2 files)

Testcase found while fuzzing mozilla-central rev 4c7eaf384b06.

Hit MOZ_CRASH(We should be able to map a raw rule to a rule: StyleRule { selectors: SelectorList([Selector(DAMP, specificity = 0x1), Selector(HTML, specificity = 0x1)]), block: [], source_location: SourceLocation { line: 2, column: 1 } }) at /builds/worker/workspace/build/src/layout/inspector/InspectorUtils.cpp:238

rax = 0x000055790cddae20 rdx = 0x0000000000000000
rcx = 0x0000000000000b40 rbx = 0x000055790cddaa20
rsi = 0x00007fa116c1f8b0 rdi = 0x00007fa116c1e680
rbp = 0x00007fffa2f11090 rsp = 0x00007fffa2f10fa0
r8 = 0x00007fa116c1f8b0 r9 = 0x00007fa117d7a740
r10 = 0x0000000000000000 r11 = 0x0000000000000000
r12 = 0x00007fffa2f10fe8 r13 = 0x0000000000000000
r14 = 0x0000000000000000 r15 = 0x00007fffa2f110e8
rip = 0x00007fa108793a2f
OS|Linux|0.0.0 Linux 4.18.0-17-generic #18~18.04.1-Ubuntu SMP Fri Mar 15 15:27:12 UTC 2019 x86_64
CPU|amd64|family 6 model 158 stepping 10|1
GPU|||
Crash|SIGSEGV /SEGV_MAPERR|0x0|0
0|0|libxul.so|mozilla::dom::InspectorUtils::GetCSSStyleRules(mozilla::dom::GlobalObject&, mozilla::dom::Element&, nsTSubstring<char16_t> const&, nsTArray<RefPtr<mozilla::BindingStyleRule> >&)|hg:hg.mozilla.org/mozilla-central:layout/inspector/InspectorUtils.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|209|0x32
0|1|libxul.so|mozilla::dom::InspectorUtils_Binding::getCSSStyleRules|s3:gecko-generated-sources:7d3786651653ff7f55968f7e821fd96b972e2bfe9eacad3f01187a31cba71629e5c54da6c0355dfbe7007cabf358728c2d8540cf424252457ffc41a13752965b/dom/bindings/InspectorUtilsBinding.cpp:|2858|0x21
0|2|libxul.so|CallJSNative(JSContext*, bool ()(JSContext, unsigned int, JS::Value*), JS::CallArgs const&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|442|0x13
0|3|libxul.so|js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|534|0x12
0|4|libxul.so|InternalCall|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|589|0xd
0|5|libxul.so|Interpret|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|593|0xf
0|6|libxul.so|js::RunScript(JSContext*, js::RunState&)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|422|0xb
0|7|libxul.so|js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|562|0xf
0|8|libxul.so|InternalCall|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|589|0xd
0|9|libxul.so|js::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Interpreter.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|605|0x5
0|10|libxul.so|JS::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::HandleValueArray const&, JS::MutableHandle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/jsapi.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|2636|0x1c
0|11|libxul.so|mozilla::dom::EventListener::HandleEvent(JSContext*, JS::Handle<JS::Value>, mozilla::dom::Event&, mozilla::ErrorResult&)|s3:gecko-generated-sources:9ca8646d8042e9b4b76d2e1b358b984be17743b71b832c0897d61bb500e0fecbe38fa54273dc522878c87fcb2c9bfd274a8190c7bc56fbbb58cb3ca68462e527/dom/bindings/EventListenerBinding.cpp:|52|0x5
0|12|libxul.so|void mozilla::dom::EventListener::HandleEvent<mozilla::dom::EventTarget*>(mozilla::dom::EventTarget* const&, mozilla::dom::Event&, mozilla::ErrorResult&, char const*, mozilla::dom::CallbackObject::ExceptionHandling, JS::Realm*)|s3:gecko-generated-sources:f3d9c01258576daaac3afc4fb3b283652e7f1168abb5287eff6775451ebd0ab6a0e4c8d88d3a67f7147042501bc091c6dfed25b4b8ccf4e4f420897b8d0ba906/dist/include/mozilla/dom/EventListenerBinding.h:|66|0x1c
0|13|libxul.so|mozilla::EventListenerManager::HandleEventSubType(mozilla::EventListenerManager::Listener*, mozilla::dom::Event*, mozilla::dom::EventTarget*)|hg:hg.mozilla.org/mozilla-central:dom/events/EventListenerManager.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|1040|0x1e
0|14|libxul.so|mozilla::EventListenerManager::HandleEventInternal(nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event**, mozilla::dom::EventTarget*, nsEventStatus*, bool)|hg:hg.mozilla.org/mozilla-central:dom/events/EventListenerManager.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|1240|0x19
0|15|libxul.so|mozilla::EventTargetChainItem::HandleEvent(mozilla::EventChainPostVisitor&, mozilla::ELMCreationDetector&)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|351|0x6
0|16|libxul.so|mozilla::EventTargetChainItem::HandleEventTargetChain(nsTArray<mozilla::EventTargetChainItem>&, mozilla::EventChainPostVisitor&, mozilla::EventDispatchingCallback*, mozilla::ELMCreationDetector&)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|551|0x12
0|17|libxul.so|mozilla::EventDispatcher::Dispatch(nsISupports*, nsPresContext*, mozilla::WidgetEvent*, mozilla::dom::Event*, nsEventStatus*, mozilla::EventDispatchingCallback*, nsTArray<mozilla::dom::EventTarget*>)|hg:hg.mozilla.org/mozilla-central:dom/events/EventDispatcher.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|1047|0x1a
0|18|libxul.so|nsDocumentViewer::LoadComplete(nsresult)|hg:hg.mozilla.org/mozilla-central:layout/base/nsDocumentViewer.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|1100|0x25
0|19|libxul.so|nsDocShell::EndPageLoad(nsIWebProgress
, nsIChannel*, nsresult)|hg:hg.mozilla.org/mozilla-central:docshell/base/nsDocShell.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|6625|0x14
0|20|libxul.so|nsDocShell::OnStateChange(nsIWebProgress*, nsIRequest*, unsigned int, nsresult)|hg:hg.mozilla.org/mozilla-central:docshell/base/nsDocShell.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|6425|0x18
0|21|libxul.so|nsDocLoader::DoFireOnStateChange(nsIWebProgress*, nsIRequest*, int&, nsresult)|hg:hg.mozilla.org/mozilla-central:uriloader/base/nsDocLoader.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|1313|0x64
0|22|libxul.so|nsDocLoader::doStopDocumentLoad(nsIRequest*, nsresult)|hg:hg.mozilla.org/mozilla-central:uriloader/base/nsDocLoader.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|872|0x2a
0|23|libxul.so|nsDocLoader::DocLoaderIsEmpty(bool)|hg:hg.mozilla.org/mozilla-central:uriloader/base/nsDocLoader.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|710|0x15
0|24|libxul.so|nsDocLoader::OnStopRequest(nsIRequest*, nsresult)|hg:hg.mozilla.org/mozilla-central:uriloader/base/nsDocLoader.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|598|0x16
0|25|libxul.so|mozilla::net::nsLoadGroup::RemoveRequest(nsIRequest*, nsISupports*, nsresult)|hg:hg.mozilla.org/mozilla-central:netwerk/base/nsLoadGroup.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|568|0x17
0|26|libxul.so|mozilla::dom::Document::DoUnblockOnload()|hg:hg.mozilla.org/mozilla-central:dom/base/Document.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|7971|0x20
0|27|libxul.so|mozilla::dom::Document::UnblockOnload(bool)|hg:hg.mozilla.org/mozilla-central:dom/base/Document.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|7903|0x8
0|28|libxul.so|mozilla::dom::Document::DispatchContentLoadedEvents()|hg:hg.mozilla.org/mozilla-central:dom/base/Document.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|5087|0xd
0|29|libxul.so|mozilla::detail::RunnableMethodImpl<mozilla::dom::Document*, void (mozilla::dom::Document::)(), true, (mozilla::RunnableKind)0>::Run()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.h:4c7eaf384b06cfda8314be34cd179ab46f271ccc|1174|0x13
0|30|libxul.so|mozilla::SchedulerGroup::Runnable::Run()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/SchedulerGroup.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|295|0x15
0|31|libxul.so|nsThread::ProcessNextEvent(bool, bool
)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|1180|0x15
0|32|libxul.so|NS_ProcessNextEvent(nsIThread*, bool)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|486|0x11
0|33|libxul.so|mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessagePump.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|88|0xa
0|34|libxul.so|MessageLoop::RunInternal()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:4c7eaf384b06cfda8314be34cd179ab46f271ccc|315|0x17
0|35|libxul.so|MessageLoop::Run()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:4c7eaf384b06cfda8314be34cd179ab46f271ccc|290|0x8
0|36|libxul.so|nsBaseAppShell::Run()|hg:hg.mozilla.org/mozilla-central:widget/nsBaseAppShell.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|137|0xd
0|37|libxul.so|XRE_RunAppShell()|hg:hg.mozilla.org/mozilla-central:toolkit/xre/nsEmbedFunctions.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|919|0x11
0|38|libxul.so|mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessagePump.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|238|0x5
0|39|libxul.so|MessageLoop::RunInternal()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:4c7eaf384b06cfda8314be34cd179ab46f271ccc|315|0x17
0|40|libxul.so|MessageLoop::Run()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:4c7eaf384b06cfda8314be34cd179ab46f271ccc|290|0x8
0|41|libxul.so|XRE_InitChildProcess(int, char**, XREChildData const*)|hg:hg.mozilla.org/mozilla-central:toolkit/xre/nsEmbedFunctions.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|757|0xc
0|42|firefox-bin|content_process_main(mozilla::Bootstrap*, int, char**)|hg:hg.mozilla.org/mozilla-central:ipc/contentproc/plugin-container.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|56|0x14
0|43|firefox-bin|main|hg:hg.mozilla.org/mozilla-central:browser/app/nsBrowserApp.cpp:4c7eaf384b06cfda8314be34cd179ab46f271ccc|263|0x11
0|44|libc-2.27.so||||0x21b97
0|45|firefox-bin|MOZ_ReportCrash|hg:hg.mozilla.org/mozilla-central:mfbt/Assertions.h:4c7eaf384b06cfda8314be34cd179ab46f271ccc|184|0x5

Flags: in-testsuite?
Attached file testcase.html
Flags: needinfo?(emilio)

P3 since this assertion's implication is just "Rules don't show up in devtools".

Priority: -- → P3
Assignee: nobody → emilio
Flags: needinfo?(emilio)

We need to notify the whole parent chain (using NOTIFY) rather than just
mStyleSets, since mStyleSets is empty for @import-ed sheets.

Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/41db3c4f9929 When an @import stylesheet is cloned, we should also make sure to restyle. r=heycam
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69
Regressions: 1553971
Flags: in-testsuite? → in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: