Bug 1546255 - When an @import stylesheet is cloned, we should also make sure to restyle. r=heycam

We need to notify the whole parent chain (using NOTIFY) rather than just
mStyleSets, since mStyleSets is empty for @import-ed sheets.

Differential Revision: https://phabricator.services.mozilla.com/D31787